--- a/index.html
+++ b/index.html
@@ -78,6 +78,37 @@
 			</div>
 		</div>
 	</div>
+    <h1>Mes compétences techniques</h1>
+    <br>
+    
+        <dl class="skills-diagram">
+            <dt class="skill-5">Angular</dt>
+            <dd>1</dd>
+            <dt class="skill-10">Php 7</dt>
+            <dd>2</dd>
+            <dt class="skill-3">MySQL</dt>
+            <dd>3</dd>
+            <dt class="skill-8">Twig</dt>
+            <dd>4</dd>
+            <dt class="skill-4">CSS</dt>
+            <dd>5</dd>
+            <dt class="skill-13">Bulma</dt>
+            <dd>6</dd>
+            <dt class="skill-6">HTML5</dt>
+            <dd>7</dd>
+            <dt class="skill-7">JavaScript</dt>
+            <dd>8</dd>
+            <dt class="skill-9">Symfony 5</dt>
+            <dd>9</dd>
+            <dt class="skill-11">Bootstrap</dt>
+            <dd>10</dd>
+            <dt class="skill-12">Wordpress</dt>
+            <dd>11</dd>
+    
+          </dl>
+
+
+
 
   
     <!-- Bootstrap Bundle with Popper -->
