--- a/index.html
+++ b/index.html
@@ -106,8 +106,77 @@
             <dd>11</dd>
     
           </dl>
+<br>
+          <div class="container">
+            <div class="page-header">
+              <h1 id="timeline">Mon parcours</h1>
+            </div>
+            <ul class="timeline">
+              <li>
+                <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4 class="timeline-title">Formation Webforce3 - Développeur Web</h4>
+                    <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> Terminé le 1er février 2021</small></p>
+                    <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> <a href="https://benjamin-colomb.fr">Découvrir mon projet de fin d'année</a> </small></p>
+                  </div>
+                  <div class="timeline-body">
+                    <p>5 mois de formation pour me professionnaliser. Découvrir concrètement le métier de développeur web et être rapidement disponnible sur le marché du travail dans un domaine qui me passionne : Le Web. Spécialement attiré par le Back-End, j'ai décidé de me spécialiser sur Symfony 5. Technologie utilisée lors de mon projet de fin d'année. </p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4 class="timeline-title">Directeur de magasin</h4>
+                    <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> Terminé le 1er mars 2020</small></p>
+                    
+                  </div>
+                  <div class="timeline-body">
+                    <p>Dernière étape de mon ancien parcours professionnel. Après avoir fair le tour du métier, j'ai profité du licenciement économique lors du premier confinement pour poser réellement mes intentions de me reconvertir.</p>
+                    <p>En outre, cette expérience m'a permis de réellement être autonome et de collaborer d'une autre façon, de manière participative. 2ans de gestion d'équipe, de structure, et d'activité, mon permis d'avoir une vision 360° sur le métier que j'exerce.</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-badge danger"><i class="glyphicon glyphicon-credit-card"></i></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4 class="timeline-title">Responsable Adjoint de magasin</h4>
+                    <p>Expérience riche, attrait pour le management et la gestion</p>
+                    <p>Déjà passionné par le web, je me souviens parfaitement bien que déjà à cette époque j'utilisais Joomla pour créer le site web de mon équipe E-sport amateur à la fin de ma journée de travail.</p>
+                  </div>
+                  <div class="timeline-body">
+                    <p></p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4 class="timeline-title">Armée de Terre</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p>Militaire engagé dans le domaine du NRBC (Nucléaire, Radiologie, Biologique, Chimique). </p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-badge info"><i class="glyphicon glyphicon-floppy-disk"></i></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4 class="timeline-title">Licence Bac+3 LLCE</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p>Passionné d'histoire et de lettres, j'ai étudié les lettres, les langues et les civilisations hispaniques d'europe et d'amérique. </p>
+                  </div>
+                </div>
+              </li>
 
-
+            </ul>
+          </div>
 
 
   
