--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<div class="col-12">
 				<h1><span>B</span><span>i</span><span>e</span><span>n</span><span>v</span><span>e</span><span>n</span><span>u</span><span>e</span> <span>à</span><br>
 				<span>v</span><span>o</span><span>u</span><span>s</span></h1>
-				<p>Passer en mode sombre / clair</p>	
+				<p id="switch-light">Passer en mode sombre</p>	
 						</div>	
 					</div>		
 				</div>		
