Ajout présentation en top

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <title>Mon Portfolio</title>
 </head>
 
+
 <body class="hero-anime">	
 
 	<div class="navigation-wrap bg-light start-header start-style">
@@ -78,6 +79,25 @@
 			</div>
 		</div>
 	</div>
+
+
+    <div class="container welcome-pg" id="About">
+        <div class="row">
+          <div class="col-sm-4"> 
+           <img src="assets/moi2.jpg" onmouseover="this.src='assets/moi3.jpg'" onmouseout="this.src='assets/moi2.jpg' " alt="mon visage" class="img-responsive">
+          </div>
+    <!-- I divided the paragraph into multiple <p>'s in order to for the type texting effect to be effective, creating different keyframe animations for each -->
+          <div class="col-sm-8 welcome-txt">
+              <p class="courier"> Je ne le dirai jamais assez          </p>
+              <p class="courier"> Le café est la boisson la plus importante de la journée          </p> 
+              <p class="courier"> Coder en fin de soirée est le plus excitant des projet </p> 
+              <p class="courier"> Bien plus satisfaisant que de win sur R6S en classé  </p>
+          </div>
+        </div>
+    </div> 
+
+<br>
+
     <h1>Mes compétences techniques</h1>
     <br>
     
