--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </div>
           <div class="col-sm-8 welcome-txt">
               <p class="courier"> Je m'apelle Benjamin Colomb</p>
-              <p class="courier"> J'ai 21 ans et j'habite à Marseille</p> 
+              <p class="courier"> J'ai 27 ans et j'habite à Marseille</p> 
               <p class="courier"> J'aime coder le jour et programmer la nuit </p> 
               <p class="courier"> Bien plus satisfaisant que de win sur R6S en classé  </p>
           </div>
@@ -101,14 +101,16 @@
     <br>
     
         <dl class="skills-diagram">
-            <dt class="skill-5">Angular</dt>
-            <dd>1</dd>
-            <dt class="skill-10">Php 7</dt>
-            <dd>2</dd>
-            <dt class="skill-3">MySQL</dt>
-            <dd>3</dd>
-            <dt class="skill-8">Twig</dt>
-            <dd>4</dd>
+          <dt class="skill-5">Angular</dt>
+          <dd>1</dd>
+          <dt class="skill-10">Php 7</dt>
+          <dd>2</dd>
+          <dt class="skill-3">MySQL</dt>
+          <dd>3</dd>
+          <dt class="skill-8">Twig</dt>
+          <dd>4</dd>
+          <dt class="skill-7">TypeScript</dt>
+          <dd>2</dd>
             <dt class="skill-4">CSS</dt>
             <dd>5</dd>
             <dt class="skill-13">Bulma</dt>
@@ -116,6 +118,8 @@
             <dt class="skill-6">HTML5</dt>
             <dd>7</dd>
             <dt class="skill-7">JavaScript</dt>
+            <dd>8</dd>
+            <dt class="skill-13">Jquery</dt>
             <dd>8</dd>
             <dt class="skill-9">Symfony 5</dt>
             <dd>9</dd>
@@ -198,7 +202,7 @@
           </div>
 
 
-<br>
+<br> 
 
 <h1>Mon Travail</h1>
           <div class="cards">
@@ -281,13 +285,94 @@
               </div>
             </div>
           </div>
-          
-<br> <br> <br>
-<h1>Mes hobbies</h1>
-<!-- 
-90FD73BE9E7FC2FEECB97258E9C79786 -->
 
-<p id="success">test</p>
+<br> <br> 
+<br> <br>
+<hr>
+<h1>Mes hobbies</h1>
+
+
+
+
+<div class="row">
+
+  <div class="card-hobbie card-1 card">
+    <div class="wrapper">
+      <div class="data">
+        <div class="content">
+          <span class="author">à la maison</span>
+          <h1 class="title">Jeux vidéos compétitifs</h1>
+          <p class="text">Je suis passionné par les jeux vidéos et l'e-sport</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="card-hobbie card-2 card">
+    <div class="wrapper">
+      <div class="data">
+        <div class="content">
+          <span class="author">à la maison</span>
+          <h1 class="title">Développer et me former</h1>
+          <p class="text">Suivre des formations Udemy ou faire de petits projets</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card-hobbie card-3 card">
+    <div class="wrapper">
+      <div class="data">
+        <div class="content">
+          <span class="author">En Europe</span>
+          <h1 class="title">Voyager en Week-end</h1>
+          <p class="text">Voyager plusieurs week-ends par an pour retrouver mes amis et famille</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card-hobbie card-4 card">
+    <div class="wrapper">
+      <div class="data">
+        <div class="content">
+          <span class="author">Sur le net</span>
+          <h1 class="title">Gifs et Culture Web</h1>
+          <p class="text">Passionné par la culture web et en particulier des gifs qui ponctuent mes échanges entre amis</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card-hobbie card-5 card">
+    <div class="wrapper">
+      <div class="data">
+        <div class="content">
+          <span class="author">Sur le net</span>
+          <h1 class="title">Les séries et films</h1>
+          <p class="text">Pas fan du cinéma par les temps qui courent, mais bien du streaming légal.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card-hobbie card-6 card">
+    <div class="wrapper">
+      <div class="data">
+        <div class="content">
+          <span class="author">En streaming</span>
+          <h1 class="title">La musique</h1>
+          <p class="text">Pop Electro Rock... </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
 
 
 
