ajout animation JS

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <h1>Mes compétences techniques</h1>
     <br>
-    
+    <h2 id="writeon" class="text-center">Pour vous, je peux </h2>
         <dl class="skills-diagram">
           <dt class="skill-5">Angular</dt>
           <dd>1</dd>
@@ -132,14 +132,11 @@
             <dd>10</dd>
             <dt class="skill-12">Wordpress</dt>
             <dd>11</dd>
-    
           </dl>
 
           <br> 
-
-<h1>Mon Travail</h1>
+          <h1>Mon Travail</h1>
           <div class="cards" id="portfolio">
-
             <div class="card">
               <div class="card__image-holder">
                 <img class="card__image" src="assets/marketplacesized.png" alt="site marketplace" />
@@ -295,7 +292,7 @@
 
 
 
-<hr>
+
 <h1>Mes hobbies</h1>
 
 
